--- a/match.html
+++ b/match.html
@@ -17,6 +17,32 @@
     />
   </head>
   <body>
+    <div class="next-match">
+      <div class="score-table">
+        <div class="GURFC-card">
+          <img src="images/logo.png" id="watch-logo" />
+        </div>
+        <div></div>
+        <div
+          class="card-info"
+          style="
+            display: block;
+            text-align: center;
+            line-height: 175%;
+            padding-top: 0;
+          "
+        >
+          <h4 style="color: #041e42; text-align: center; padding-top: 4px">
+            Next Match - Preseason
+          </h4>
+          <p>Sept 7 2024</p>
+        </div>
+        <div></div>
+        <div class="opponent-card">
+          <img src="images/uva-logo.png" id="opp-logo" />
+        </div>
+      </div>
+    </div>
     <!--navigation bar-->
     <nav class="navbar">
       <div class="navbar__container">
@@ -52,150 +78,199 @@
     </nav>
     <!-- Watch Section -->
     <section class="watch__body">
-      <div class="watch__header">
-        <!--contains next match card-->
-        <div class="watch__container">
-          <div class="shape">
-            <div class="shop-header">
-              <!--borrow css from shop page-->
-              <h1>Watch</h1>
-              <h2>GURFC</h2>
-            </div>
-          </div>
-          <h2
-            style="
-              color: #041e42;
-              text-align: center;
-              padding-top: 24px;
-              font-size: 2.5rem;
-              line-height: 0;
-            "
-          >
-            Next Match:
-          </h2>
-          <div class="next-match">
-            <div class="score-table">
-              <div class="GURFC-card">
-                <img src="images/logo.png" id="watch-logo" />
+      <!--contains next match card-->
+      <div class="shape">
+        <div class="shop-header">
+          <h1>Watch</h1>
+          <h2>GURFC</h2>
+        </div>
+      </div>
+      <div class="watch__container">
+        <div class="watch__container1">
+          <div class="watch__Slideshow">
+            <h1 style="color: #041e42; font-size: 2rem">Previous Games</h1>
+            <div class="about__content2">
+              <div class="Slides fade">
+                <div class="SlideTitle"></div>
+                <iframe
+                  width="384"
+                  height="683"
+                  src="https://www.youtube.com/embed/4HPlG8b21f8?si=oXaO9devNSvb6r9E"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
               </div>
-              <h2>vs.</h2>
-              <div class="opponent-card"></div>
+              <div class="Slides fade">
+                <div class="SlideTitle"></div>
+                <iframe
+                  width="384"
+                  height="683"
+                  src="https://www.youtube.com/embed/s9mZfpYUdOE?si=7hsH_nPVwXbicRi-"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+              <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br />
+            <div style="text-align: center">
+              <span class="dot" onclick="currentSlide(1)"></span>
+              <span class="dot" onclick="currentSlide(2)"></span>
             </div>
           </div>
+          <img
+            class="schedule-image"
+            src="images/schedule.png"
+            width="684"
+            height="684"
+          />
         </div>
-      </div>
-      <div class="watch__container2">
-        <h1>Results</h1>
-
-        <div class="watch__main">
-          <div class="watch__video">
-            <table class="score-box">
-              <thead>
-                <tr>
-                  <th>Opponent</th>
-                  <th>Result</th>
-                  <th>Location</th>
-                  <th>Date</th>
-                  <th>Watch</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Villanova</td>
-                  <td>W 48-37</td>
-                  <td>Alapocas Run State Park</td>
-                  <td>11/4/2023</td>
-                  <td>Georgetown vs. Villanova</td>
-                </tr>
-                <tr class="active-row">
-                  <td>Scranton</td>
-                  <td>W 50-22</td>
-                  <td>North Bay Rugby Club</td>
-                  <td>10/28/2023</td>
-                  <td>Georgetown vs. Scranton</td>
-                </tr>
-                <tr>
-                  <td>Shippensburg</td>
-                  <td>W 28-0</td>
-                  <td>@ Shippensburg</td>
-                  <td>10/21/2023</td>
-                  <td>Shippensburg vs. Georgetown</td>
-                </tr>
-                <tr>
-                  <td>Drexel</td>
-                  <td>W 28-0</td>
-                  <td>Cooper Field</td>
-                  <td>10/14/2023</td>
-                  <td>Unavailable</td>
-                </tr>
-                <tr>
-                  <td>Towson</td>
-                  <td>W 47-0</td>
-                  <td>@ Towson</td>
-                  <td>10/7/2023</td>
-                  <td>Unavailable</td>
-                </tr>
-                <tr>
-                  <td>Mount C</td>
-                  <td>W 78-10</td>
-                  <td>@ Mount</td>
-                  <td>9/23/2023</td>
-                  <td>Unavailable</td>
-                </tr>
-                <tr>
-                  <td>UMBC</td>
-                  <td>W 78-10</td>
-                  <td>Cooper Field</td>
-                  <td>9/16/2023</td>
-                  <td>Unavailable</td>
-                </tr>
-                <tr>
-                  <td>York</td>
-                  <td>W 28-0</td>
-                  <td>@ York</td>
-                  <td>9/9/2023</td>
-                  <td>Unavailable</td>
-                </tr>
-              </tbody>
-            </table>
+        <div class="watch__container2">
+          <div class="videos">
+            <div class="youtube">
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/mCCw3i3kI4A?si=mXqDvqglqzNDxq1U&amp;start=844"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen
+              ></iframe>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="videos">
-        <div class="youtube">
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/mCCw3i3kI4A?si=mXqDvqglqzNDxq1U&amp;start=844"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            referrerpolicy="strict-origin-when-cross-origin"
-            allowfullscreen
-          ></iframe>
+          <div class="watch__main">
+            <div class="watch__video">
+              <table class="score-box">
+                <caption>
+                  2023 Results
+                </caption>
+                <thead>
+                  <tr>
+                    <th>Opponent</th>
+                    <th>Result</th>
+                    <th>Location</th>
+                    <th>Date</th>
+                    <th>Watch</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Villanova</td>
+                    <td>W 48-37</td>
+                    <td>Alapocas Run State Park</td>
+                    <td>11/4/2023</td>
+                    <td>Georgetown vs. Villanova</td>
+                  </tr>
+                  <tr class="active-row">
+                    <td>Scranton</td>
+                    <td>W 50-22</td>
+                    <td>North Bay Rugby Club</td>
+                    <td>10/28/2023</td>
+                    <td>Georgetown vs. Scranton</td>
+                  </tr>
+                  <tr>
+                    <td>Shippensburg</td>
+                    <td>W 28-0</td>
+                    <td>@ Shippensburg</td>
+                    <td>10/21/2023</td>
+                    <td>Shippensburg vs. Georgetown</td>
+                  </tr>
+                  <tr>
+                    <td>Drexel</td>
+                    <td>W 28-0</td>
+                    <td>Cooper Field</td>
+                    <td>10/14/2023</td>
+                    <td>Unavailable</td>
+                  </tr>
+                  <tr>
+                    <td>Towson</td>
+                    <td>W 47-0</td>
+                    <td>@ Towson</td>
+                    <td>10/7/2023</td>
+                    <td>Unavailable</td>
+                  </tr>
+                  <tr>
+                    <td>Mount C</td>
+                    <td>W 78-10</td>
+                    <td>@ Mount</td>
+                    <td>9/23/2023</td>
+                    <td>Unavailable</td>
+                  </tr>
+                  <tr>
+                    <td>UMBC</td>
+                    <td>W 78-10</td>
+                    <td>Cooper Field</td>
+                    <td>9/16/2023</td>
+                    <td>Unavailable</td>
+                  </tr>
+                  <tr>
+                    <td>York</td>
+                    <td>W 28-0</td>
+                    <td>@ York</td>
+                    <td>9/9/2023</td>
+                    <td>Unavailable</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
     </section>
     <!--Footer Section-->
-    <div class="footer__container">
-      <div class="footer__logo">
-        <a href="/" id="footer__logo">
-          <img src="images/logo.png" width="100" height="100" />
-        </a>
-        <p>©2024 All rights reserved</p>
+    <section>
+      <div class="footer__container">
+        <div class="footer__logo">
+          <a href="index.html" id="footer__img">
+            <img src="images/logo.png" width="100" height="100" />
+          </a>
+          <p>©2024 All rights reserved</p>
+        </div>
+        <div class="footer__links">
+          <div class="footer__column">
+            <a href="shop.html">Shop</a>
+            <a href="us.html">About</a>
+            <a href="roster.html">Roster</a>
+            <a href="match.html">Watch</a>
+          </div>
+          <div class="footer__column">
+            <a href="watch.html">Join GURFC</a>
+            <a href="coach.html">Coaching</a>
+            <a href="https://thehoya.com/?s=rugby">Blog</a>
+            <a href="https://linktr.ee/gurfc">More Links</a>
+          </div>
+        </div>
+        <div class="social__icons">
+          <a
+            href="/"
+            class="social__icon--link"
+            target="https://www.instagram.com/gurfc/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/GURFC/"
+            class="social__icon--link"
+            target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.youtube.com/channel/UCkJRjD6pDyHIiu_goEFzu9A"
+            class="social__icon--link"
+            target="_blank"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </div>
       </div>
-      <div class="social__icons">
-        <a href="/" class="social__icon--link" target="_blank"
-          ><i class="fa-brands fa-instagram"></i
-        ></a>
-        <a href="/" class="social__icon--link" target="_blank"
-          ><i class="fa-brands fa-facebook"></i
-        ></a>
-        <a href="/" class="social__icon--link" target="_blank"
-          ><i class="fa-brands fa-youtube"></i
-        ></a>
-      </div>
-    </div>
+    </section>
 
     <script src="app.js"></script>
   </body>
