--- a/us.html
+++ b/us.html
@@ -17,6 +17,32 @@
     />
   </head>
   <body>
+    <div class="next-match">
+      <div class="score-table">
+        <div class="GURFC-card">
+          <img src="images/logo.png" id="watch-logo" />
+        </div>
+        <div></div>
+        <div
+          class="card-info"
+          style="
+            display: block;
+            text-align: center;
+            line-height: 175%;
+            padding-top: 0;
+          "
+        >
+          <h4 style="color: #041e42; text-align: center; padding-top: 4px">
+            Next Match - Preseason
+          </h4>
+          <p>Sept 7 2024</p>
+        </div>
+        <div></div>
+        <div class="opponent-card">
+          <img src="images/uva-logo.png" id="opp-logo" />
+        </div>
+      </div>
+    </div>
     <!--navigation bar-->
     <nav class="navbar">
       <div class="navbar__container">
@@ -60,16 +86,15 @@
           <div class="about__content">
             <h2>Our History</h2>
             <p>
-              Founded in 1967, Georgetown University Rugby Football Club is a
-              club sport team that has competed at the highest levels of
-              collegiate rugby since its inception. The team competes in the
-              Mid-Atlantic Rugby Conference in Division II of National
-              Collegiate Rugby. Our team carries the values of our institution
-              onto the rugby field, and vice versa. The team culture that has
-              been passed on from class to class continues because of the active
-              involvement of our alumni network. They play an active role
-              supporting the next generation of Hoyas in their rugby and
-              professional careers.
+              In the spring of 1967, Michael Murphy, a Georgetown Law student,
+              alongside former members of the Washington, D.C. Rugby Football
+              club came together to found the Georgetown University Rugby
+              Football Club. Tracing back to its early years, leadership,
+              inclusivity, and excellence have defined the spirit of GURFC. In
+              other words, out of respect for the many generations of A and B
+              (and even sometimes C)-side ruggers rising early to play local
+              rivals, GURFC today honors their legacy by pushing the club to
+              greater heights.
             </p>
             <div class="abt-imgs">
               <img src="images/PD.jpeg" id="abtimg" />
@@ -87,14 +112,10 @@
               <img src="images/include.jpg" class="ssimg" />
               <div class="caption">
                 <p>
-                  Inclusivity is at the heart of everything we do. Rugby is for
-                  everyone, regardless of experience or background. Our club is
-                  a welcoming space where individuals from diverse walks of life
-                  come together, united by their love for the game. We embrace
-                  and celebrate the richness of different perspectives and
-                  identities in our community. Whether you're a seasoned player
-                  or stepping onto the field for the first time, GURFC is your
-                  home.
+                  In GURFC, we believe inclusivity is vital to fielding the best
+                  team we possibly can. We have no try-outs, and welcome anybody
+                  to come to our practices to teach or learn the beautiful game
+                  of rugby.
                 </p>
               </div>
             </div>
@@ -105,15 +126,11 @@
               <img src="images/athlete.jpeg" class="ssimg" />
               <div class="caption">
                 <p>
-                  GURFC is more than a sports team; it's a platform for personal
-                  growth and leadership development. Through our rigorous
-                  training sessions, our coaching staff not only hones players'
-                  rugby skills but also instills values like discipline,
-                  resilience, and teamwork. We encourage our members to take on
-                  leadership roles on and off the field, fostering a culture of
-                  accountability and empowerment. The lessons learned on the
-                  pitch translate into life skills that extend far beyond the
-                  game.
+                  We believe that practice is not time off. Sharpening a skill,
+                  whether athletic, academic, or professional requires
+                  consistent intensity. Our practices serve as a reminder of how
+                  good it feels to become better and how easy it is to work hard
+                  when you know you’re making a difference.
                 </p>
               </div>
             </div>
@@ -124,15 +141,10 @@
               <img src="images/fwd.jpg" class="ssimg" />
               <div class="caption">
                 <p>
-                  Joining GURFC means gaining a support network that extends
-                  beyond the game itself. Our members are dedicated to
-                  supporting one another academically, physically, and
-                  personally. From study groups and fitness sessions to being
-                  there for each other through life's challenges, GURFC fosters
-                  an environment where teammates become lifelong friends. Our
-                  community is one where bonds forged on the field translate
-                  into lasting relationships and a sense of belonging that lasts
-                  well beyond college.
+                  For us, rugby is just one small part of our lives. GURFC
+                  players and alums take pride in all of their academic,
+                  extracurricular, and professional involvements. Being part of
+                  GURFC goes far beyond simply playing rugby.
                 </p>
               </div>
             </div>
@@ -147,17 +159,17 @@
           </div>
         </div>
         <hr />
+        <h2 style="color: #041e42; font-size: 2rem">Read more</h2>
         <div class="about__content3">
-          <h2>Embracing Tradition</h2>
-          <p>
-            As a part of GURFC, you're not just joining a team but becoming part
-            of a rich tradition. We take pride in our history, honoring the
-            legacy of those who have worn our jersey before us. From game-day
-            rituals to alumni events, we cherish the traditions that define our
-            club. Moreover, we're committed to creating new memories and
-            experiences for our members, ensuring that every season brings
-            moments that will be cherished for a lifetime.
-          </p>
+          <a
+            href="https://thehoya.com/sports/club-rugby-new-look-squad-same-old-winning-ways/"
+            ><img src="images/article 1.png" id="article1"
+          /></a>
+          <a
+            href="https://thehoya.com/sports/club-rugby-georgetown-learns-from-the-best-ahead-of-new-season/"
+            ><img src="images/article 2.png" id="article2"
+          /></a>
+          <h2 style="color: #041e42; font-size: 2rem">Hoya Rugger</h2>
           <iframe
             width="500"
             height="315"
@@ -172,25 +184,50 @@
       </div>
     </div>
     <!--Footer Section-->
-    <div class="footer__container">
-      <div class="footer__logo">
-        <a href="/" id="footer__logo">
-          <img src="images/logo.png" width="80" height="80" />
-        </a>
-        <p>©2024 All rights reserved</p>
+    <section>
+      <div class="footer__container">
+        <div class="footer__logo">
+          <a href="index.html" id="footer__img">
+            <img src="images/logo.png" width="100" height="100" />
+          </a>
+          <p>©2024 All rights reserved</p>
+        </div>
+        <div class="footer__links">
+          <div class="footer__column">
+            <a href="shop.html">Shop</a>
+            <a href="us.html">About</a>
+            <a href="roster.html">Roster</a>
+            <a href="match.html">Watch</a>
+          </div>
+          <div class="footer__column">
+            <a href="watch.html">Join GURFC</a>
+            <a href="coach.html">Coaching</a>
+            <a href="https://thehoya.com/?s=rugby">Blog</a>
+            <a href="https://linktr.ee/gurfc">More Links</a>
+          </div>
+        </div>
+        <div class="social__icons">
+          <a
+            href="/"
+            class="social__icon--link"
+            target="https://www.instagram.com/gurfc/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/GURFC/"
+            class="social__icon--link"
+            target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.youtube.com/channel/UCkJRjD6pDyHIiu_goEFzu9A"
+            class="social__icon--link"
+            target="_blank"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </div>
       </div>
-      <div class="social__icons">
-        <a href="/" class="social__icon--link" target="_blank"
-          ><i class="fa-brands fa-instagram"></i
-        ></a>
-        <a href="/" class="social__icon--link" target="_blank"
-          ><i class="fa-brands fa-facebook"></i
-        ></a>
-        <a href="/" class="social__icon--link" target="_blank"
-          ><i class="fa-brands fa-youtube"></i
-        ></a>
-      </div>
-    </div>
+    </section>
 
     <script src="app.js"></script>
   </body>
