--- a/coach.html
+++ b/coach.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
-    <title>GURFC|Shop</title>
+    <title>GURFC|Coaching</title>
     <script
       src="https://kit.fontawesome.com/2601b20e92.js"
       crossorigin="anonymous"
@@ -76,91 +76,12 @@
         </div>
       </div>
     </nav>
-    <section class="shop">
-      <div class="shape">
-        <div class="shop-header">
-          <h1>GURFC</h1>
-          <h2>Shop</h2>
-        </div>
-      </div>
-      <div class="shop-main">
-        <div class="shop-body1">
-          <a
-            href="https://www.liquidrugby.com/georgetown-university-rfc"
-            style="text-decoration: none; color: #041e42"
-            class="first"
-          >
-            <div class="shop-card1">
-              <h1>Liquid Rugby</h1>
-              <p>Gear for the team</p>
-              <img src="images/akuma.webp" class="shop-image" />
-            </div>
-          </a>
-          <a
-            href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club"
-            style="text-decoration: none; color: #041e42"
-            class="middle"
-          >
-            <div class="shop-card1">
-              <h1>World Rugby Shop</h1>
-              <p>Gear for everybody</p>
-              <img src="images/wrs.webp" class="shop-image" />
-            </div>
-          </a>
-          <a href="" style="text-decoration: none; color: #041e42" class="last">
-            <div class="shop-card1">
-              <h1>Our Merch</h1>
-              <p>Coming Soon</p>
-              <p>
-                <img src="images/merch.webp" class="shop-image" />
-              </p>
-            </div>
-          </a>
-        </div>
-        <br />
-        <h1 style="text-align: center; color: #041e42; font-size: 3rem">
-          Our Picks
-        </h1>
-        <br />
-        <div class="shop-body2">
-          <a
-            href="https://www.worldrugbyshop.com/products/georgetown-university-rfc-classic-long-sleeve-hooped-rugby-jersey?variant=41751236935777"
-            style="text-decoration: none; color: #041e42"
-          >
-            <div class="shop-card2">
-              <img src="images/shop1.webp" class="shop-image2" />
-              <h1>Long Sleeve Hooped Rugby Jersey</h1>
-            </div>
-          </a>
-          <a
-            href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-club-dry-polo-by-canterbury"
-            style="text-decoration: none; color: #041e42"
-          >
-            <div class="shop-card2">
-              <img src="images/shop2.jpg" class="shop-image2" />
-              <h1>Canterbury Dry Polo</h1>
-            </div>
-          </a>
-          <a
-            href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-free-form-rugby-backpack"
-            style="text-decoration: none; color: #041e42"
-          >
-            <div class="shop-card2">
-              <img src="images/shop3.webp" class="shop-image2" />
-              <h1>GURFC Free Form Rugby Backpack</h1>
-            </div>
-          </a>
-          <a
-            href="https://www.worldrugbyshop.com/collections/georgetown-university-rugby-football-club/products/georgetown-university-rfc-club-hoodie-by-canterbury?variant=41751223074913"
-            style="text-decoration: none; color: #041e42"
-          >
-            <div class="shop-card2">
-              <img src="images/shop4.webp" class="shop-image2" />
-              <h1>Canterbury Club Hoodie</h1>
-            </div>
-          </a>
-        </div>
-        <div class="shop-donate"></div>
+    <!--Hero Section-->
+    <section class="coach__body">
+      <div class="coaching__container">
+        <div class="coaching__about"></div>
+        <div class="coach__pictures"></div>
+        <div class="coaching__testimonial"></div>
       </div>
     </section>
     <section>
@@ -192,16 +113,10 @@
             target="https://www.instagram.com/gurfc/"
             ><i class="fa-brands fa-instagram"></i
           ></a>
-          <a
-            href="https://www.facebook.com/GURFC/"
-            class="social__icon--link"
-            target="_blank"
+          <a href="/" class="social__icon--link" target="_blank"
             ><i class="fa-brands fa-facebook"></i
           ></a>
-          <a
-            href="https://www.youtube.com/channel/UCkJRjD6pDyHIiu_goEFzu9A"
-            class="social__icon--link"
-            target="_blank"
+          <a href="/" class="social__icon--link" target="_blank"
             ><i class="fa-brands fa-youtube"></i
           ></a>
         </div>
