--- a/watch.html
+++ b/watch.html
@@ -17,6 +17,32 @@
     />
   </head>
   <body>
+    <div class="next-match">
+      <div class="score-table">
+        <div class="GURFC-card">
+          <img src="images/logo.png" id="watch-logo" />
+        </div>
+        <div></div>
+        <div
+          class="card-info"
+          style="
+            display: block;
+            text-align: center;
+            line-height: 175%;
+            padding-top: 0;
+          "
+        >
+          <h4 style="color: #041e42; text-align: center; padding-top: 4px">
+            Next Match - Preseason
+          </h4>
+          <p>Sept 7 2024</p>
+        </div>
+        <div></div>
+        <div class="opponent-card">
+          <img src="images/uva-logo.png" id="opp-logo" />
+        </div>
+      </div>
+    </div>
     <!--navigation bar-->
     <nav class="navbar">
       <div class="navbar__container">
@@ -86,25 +112,50 @@
       </div>
     </div>
     <!--Footer Section-->
-    <div class="footer__container">
-      <div class="footer__logo">
-        <a href="/" id="footer__logo">
-          <img src="images/logo.png" width="80" height="80" />
-        </a>
-        <p>©2024 All rights reserved</p>
+    <section>
+      <div class="footer__container">
+        <div class="footer__logo">
+          <a href="index.html" id="footer__img">
+            <img src="images/logo.png" width="100" height="100" />
+          </a>
+          <p>©2024 All rights reserved</p>
+        </div>
+        <div class="footer__links">
+          <div class="footer__column">
+            <a href="shop.html">Shop</a>
+            <a href="us.html">About</a>
+            <a href="roster.html">Roster</a>
+            <a href="match.html">Watch</a>
+          </div>
+          <div class="footer__column">
+            <a href="watch.html">Join GURFC</a>
+            <a href="coach.html">Coaching</a>
+            <a href="https://thehoya.com/?s=rugby">Blog</a>
+            <a href="https://linktr.ee/gurfc">More Links</a>
+          </div>
+        </div>
+        <div class="social__icons">
+          <a
+            href="/"
+            class="social__icon--link"
+            target="https://www.instagram.com/gurfc/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/GURFC/"
+            class="social__icon--link"
+            target="_blank"
+            ><i class="fa-brands fa-facebook"></i
+          ></a>
+          <a
+            href="https://www.youtube.com/channel/UCkJRjD6pDyHIiu_goEFzu9A"
+            class="social__icon--link"
+            target="_blank"
+            ><i class="fa-brands fa-youtube"></i
+          ></a>
+        </div>
       </div>
-      <div class="social__icons">
-        <a href="/" class="social__icon--link" target="_blank"
-          ><i class="fa-brands fa-instagram"></i
-        ></a>
-        <a href="/" class="social__icon--link" target="_blank"
-          ><i class="fa-brands fa-facebook"></i
-        ></a>
-        <a href="/" class="social__icon--link" target="_blank"
-          ><i class="fa-brands fa-youtube"></i
-        ></a>
-      </div>
-    </div>
+    </section>
 
     <script src="app.js"></script>
   </body>
