--- a/watch.html
+++ b/watch.html
@@ -98,7 +98,11 @@
             </p>
           </div>
         </div>
-        <button class="join__btn"><b>Are You Ready?</b></button>
+        <button class="join__btn">
+          <a href="https://forms.gle/ckJdKZW1SeZxRvH99"
+            ><b>Are You Ready?</b></a
+          >
+        </button>
         <hr />
         <div id="joinimg" style="margin-top: 12px"></div>
       </div>
@@ -129,7 +133,6 @@
           </div>
           <div class="footer__column">
             <a href="watch.html">Join GURFC</a>
-            <a href="coach.html">Coaching</a>
             <a href="https://thehoya.com/?s=rugby">Blog</a>
             <a href="https://linktr.ee/gurfc">More Links</a>
           </div>
