--- a/match.html
+++ b/match.html
@@ -124,19 +124,12 @@
               <span class="dot" onclick="currentSlide(2)"></span>
             </div>
           </div>
-          <img
-            class="schedule-image"
-            src="images/schedule.png"
-            width="684"
-            height="684"
-          />
+          <img class="schedule-image" src="images/schedule.png" />
         </div>
         <div class="watch__container2">
           <div class="videos">
             <div class="youtube">
               <iframe
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/mCCw3i3kI4A?si=mXqDvqglqzNDxq1U&amp;start=844"
                 title="YouTube video player"
                 frameborder="0"
